--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <!-- <link rel="stylesheet" href="https://unpkg.com/react-quill@1.3.3/dist/quill.snow.css"/> -->
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <title>SHUBA GROW</title> -->
-    <title></title>
+    <title>Shiba Grow Admin</title>
   </head>
   <body>
     <div id="root"></div>
